# prompt-guard-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/prompt_guard_service/: app.py  classifier.py  cli.py  config.py  main.py  schemas.py
tests/: test_app_startup.py  test_config.py  test_health.py  test_predict.py
