[project]
name = "prompt-guard-service"
version = "0.1.0"
description = "FastAPI service for Prompt Guard ONNX inference"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "onnxruntime>=1.22.0",
  "pydantic-settings>=2.10.0",
  "tokenizers>=0.21.0",
  "transformers>=4.56.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
prompt-guard-service = "prompt_guard_service.cli:main"

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_guard_service"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
package = true
